deployment/rasa-x/rasa-x-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dash-ecomm
  name: rasa-x
spec:
  ports:
    - name: rasa-x-port
      port: 5002
      targetPort: 5002
  selector:
    component: rasa-x
  type: ClusterIP
