deployment/rasa-x/rasa-x-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rasa-x-ingress
  namespace: dash-ecomm
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(.*socket.io.*)$ /core/socket.io;
      rewrite ^(.*webhooks.*)$ /core/webhooks;

      if ($arg_environment = "") {
          rewrite ^/api/chat$ /core/webhooks/rasa/webhook last;
      }
      if ($arg_environment = "production") {
          rewrite ^/api/chat$ /core/webhooks/rasa/webhook last;
      }
      if ($request_uri ~ ^/robots.txt$) {
          return 200 "User-agent: *\nDisallow: /\n";
      }
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Robots-Tag none;
spec:
  tls:
  - hosts:
    - ns-botlibrary-ecomm.uksouth.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: ns-botlibrary-ecomm.uksouth.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: rasa-x
          servicePort: 5002
        path: /
